# LGSoft_Filters

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  testApp.cpp
cannyEdgeDetector/: canny.cpp  canny.hpp
include/: canny.hpp  median.hpp
inverseFilter/: inverse.cpp  inverse.hpp
laplaceFilter/: laplace.cpp  laplace.hpp
medianFilter/: median.cpp  median.hpp
source/: canny.cpp  median.cpp
